--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "webpack": "^5.93.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.3",
